--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -244,7 +244,7 @@ function  setValue(){
         // 优先展示视频；无视频再展示封面
         if (jsonObj.data.video_url) {
             cardHtml += '<video class="thumb" controls playsinline preload="metadata">';
-            cardHtml += '<source src="' + jsonObj.data.video_url + '" type="video/mp4">';
+            cardHtml += '<source src="/download?disposition=inline&url=' + encodeURIComponent(jsonObj.data.video_url) + '" type="video/mp4">';
             cardHtml += '您的浏览器不支持视频播放';
             cardHtml += '</video>';
         } else if (jsonObj.data.cover_url) {
